--- a/index.css
+++ b/index.css
@@ -1,7 +1,3 @@
-:root {
-  font-size: 13px;
-}
-
 .navbar {
   position: fixed;
   width: 100%;
@@ -17,7 +13,10 @@
   height: 100%;
 }
 .gradient-font {
-  background: -webkit-linear-gradient(#40c9ff, #e81cff);
+  background: -webkit-linear-gradient(
+    var(--blue-gradient),
+    var(--violet-gradient)
+  );
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -38,9 +37,6 @@
 }
 .light-txt {
   color: var(--light-grey);
-}
-.pill-btn {
-  border-radius: 15px;
 }
 
 .bottom-right-gif {
@@ -125,8 +121,7 @@
   align-items: center;
   flex-direction: column;
 }
-
 .subtle-btn:hover {
   color: var(--orange-color);
-  border: none;
+  border: 1px solid transparent;
 }
